# Blog-KMP/composeApp/src/commonMain/kotlin/org/chiuxah/blog/logic/bean/NavRoute.kt
@@ -5,5 +5,5 @@ enum class NavRoute {
 }
 
 enum class HomeRoute {
-    BLOG,ADD,CUBE
+    RECOMMEND,CUBE,SEARCH,FOLLOW
 }
